--- a/public/menu/menu.css
+++ b/public/menu/menu.css
@@ -317,7 +317,7 @@ h2 {
 }
 
 .inscrit {
-  background-color: #104312 !important;
+  background-color: #28ac30 !important;
   border-radius: 8px 8px 8px 8px;
   padding: 0.25rem;
   margin: 0.25em;
@@ -347,7 +347,7 @@ h2 {
 }
 
 vert{
-  color: #027908;
+  color: #28812e;
   font-weight: bold;
   text-decoration: underline;     
 }
